@@ -1,4 +1,8 @@
-2004-06-21  Mike Kestner  <mkestner@ximian.com>
+2004-06-24  Jamin Philip Gray <jamin@pubcrawler.org>
+
+	* en/Gdk/EventButton.xml : documented members.
+
+2004-06-23  Mike Kestner  <mkestner@ximian.com>
 
 	* en/*/*.xml : document event handler delegates via script-fu. 400 TBAs.
 
